--- a/index.html
+++ b/index.html
@@ -4,6 +4,63 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css"
+    />
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <section class="hero is-primary">
+      <div class="hero-body">
+        <div class="container">
+          <h1 class="title">Primary title</h1>
+          <h2 class="subtitle">Primary subtitle</h2>
+        </div>
+      </div>
+    </section>
+    <section class="section">
+      <div class="container">
+        <form>
+          <div class="field has-addons">
+            <div class="control">
+              <input class="input" type="text" placeholder="Add a task" />
+            </div>
+            <div class="control">
+              <a class="button is-primary">Add</a>
+            </div>
+          </div>
+        </form>
+      </div>
+    </section>
+    <section class="section">
+      <div class="container" id="todos"></div>
+    </section>
+
+    <script>
+      fetch("http://127.0.0.1:3000/")
+        .then((res) => res.json())
+        .then((data) => {
+          const todos = document.getElementById("todos");
+
+          data.forEach((todo) => {
+            todos.innerHTML += `
+            <div class="card">
+                <div class="card-content">
+                    <p class="title">
+                        ${todo.todo}
+                    </p>
+                </div>
+                <footer class="card-footer">
+                    <p class="card-footer-item">
+                        <button class="button is-danger">Delete</button>
+                    </p>
+                </footer>
+            </div>
+            `;
+          });
+        })
+        .catch((err) => console.log(err));
+    </script>
+  </body>
 </html>
