--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
     </section>
     <section class="section">
       <div class="container">
-        <form>
+        <form name="add">
           <div class="field has-addons">
             <div class="control">
               <input class="input" type="text" placeholder="Add a task" />
             </div>
             <div class="control">
-              <a class="button is-primary">Add</a>
+              <button class="button is-primary" type="submit">Add</button>
             </div>
           </div>
         </form>
@@ -38,29 +38,43 @@
     </section>
 
     <script>
-      fetch("http://127.0.0.1:3000/")
+      const baseURL = "http://127.0.0.1:3000";
+
+      fetch(baseURL)
         .then((res) => res.json())
         .then((data) => {
           const todos = document.getElementById("todos");
 
           data.forEach((todo) => {
             todos.innerHTML += `
-            <div class="card">
-                <div class="card-content">
-                    <p class="title">
-                        ${todo.todo}
-                    </p>
-                </div>
-                <footer class="card-footer">
-                    <p class="card-footer-item">
-                        <button class="button is-danger">Delete</button>
-                    </p>
-                </footer>
-            </div>
+              <div class="card">
+                  <div class="card-content">
+                      <p class="title">
+                          ${todo.todo}
+                      </p>
+                  </div>
+                  <footer class="card-footer">
+                      <p class="card-footer-item">
+                          <button class="button is-danger">Delete</button>
+                      </p>
+                  </footer>
+              </div>
             `;
           });
         })
         .catch((err) => console.log(err));
+
+      document.forms.add.addEventListener("submit", (e) => {
+        e.preventDefault();
+
+        fetch(baseURL, {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json",
+          },
+          body: JSON.stringify({ todo: e.target[0].value }),
+        });
+      });
     </script>
   </body>
 </html>
