--- a/index.html
+++ b/index.html
@@ -64,14 +64,17 @@
         .then(() => {
           document.querySelectorAll("button.is-danger").forEach((button) => {
             button.addEventListener("click", (e) => {
+              const card = e.target.parentElement.parentElement.parentElement;
               fetch(
-                baseURL +
-                  "/delete/" +
-                  e.target.parentElement.parentElement.parentElement.children[0].textContent.trim(),
+                baseURL + "/delete/" + card.children[0].textContent.trim(),
                 {
                   method: "DELETE",
                 }
-              );
+              )
+                .then(() => {
+                  card.parentElement.removeChild(card);
+                })
+                .catch((err) => console.log(err));
             });
           });
         })
